--- a/source/styles/timer.css
+++ b/source/styles/timer.css
@@ -252,7 +252,7 @@
     opacity: 1;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     body {
         display: flex;
         flex-direction: column;
